# grafana-k8s-operator

./: .charmcraft_output_packages.txt  .flake8  .gitignore  .wokeignore  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  actions.yaml  audit-policy.yaml  charmcraft.yaml  config.yaml  metadata.yaml  promql-transform  pyproject.toml  requirements.txt  run_tests  setup.py  test.py  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: build-and-test.yaml  ci.yaml  issues.yaml  issues.yml  promote.yaml  pull-request.yaml  pull-requests.yaml  quality-gates.yaml  release-edge.yaml  release.yaml  run_tests.yaml  update-libs.yaml
goss/: fetch-subdir.sh  git-pull-dir.sh  goss-grafana.yaml  goss.yaml
lib/: .wokeignore
lib/charms/grafana/v0/: consumer.py  provider.py
lib/charms/grafana/v1/: config.py  grafana.py  grafana_server.py  grafana_source.py  relation.py
lib/charms/grafana_auth/v0/: grafana_auth.py
lib/charms/grafana_k8s/v0/: consumer.py  grafana_auth.py  grafana_dashboard.py  grafana_metadata.py  grafana_source.py  provider.py
lib/charms/grafana_k8s/v1/: grafana_dashboard.py  grafana_source.py
lib/charms/hydra/v0/: oauth.py
lib/charms/ingress/v0/: ingress.py
lib/charms/istio_beacon_k8s/v0/: service_mesh.py
lib/charms/observability_libs/v0/: kubernetes_compute_resources_patch.py
lib/charms/prometheus_k8s/v0/: prometheus_scrape.py
lib/charms/tempo_k8s/v2/: tracing.py
lib/charms/tls_certificates_interface/v2/: tls_certificates.py
lib/charms/traefik_route_k8s/v0/: traefik_route.py
probes/: README.md  relation_dashboard_uid.py
src/: charm.py  config.py  constants.py  custom_ini_config.py  grafana.py  grafana_client.py  grafana_config.py  grafana_provider.py  grafana_server.py  killsnoop.py  kubernetes_service.py  litestream.py  models.py  peer.py  relation.py  secret_storage.py  self_dashboard.json
src/prometheus_alert_rules/: unit_unavailable.rule
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_charm.py  test_consumer.py  test_dashboard_consumer.py  test_dashboard_provider.py  test_provider.py  test_server.py  test_source_consumer.py  test_source_provider.py
tests/dashboard_templates/: first.tmpl  other.tmpl
tests/integration/: conftest.py  helpers.py  test_alternative_images.py  test_charm.py  test_external_url.py  test_get_password.py  test_grafana_auth.py  test_grafana_dashboard.py  test_grafana_metadata.py  test_grafana_oauth.py  test_grafana_source.py  test_ingress.py  test_kubectl_delete.py  test_multiple_units.py  test_resource_limits.py  test_selfmonitoring_dashboard.py  test_tls_web.py  test_trusted_certificates.py  test_upgrade_charm.py  test_workload_tracing.py  workload.py
tests/integration/auth-provider-tester/: metadata.yaml  requirements.txt
tests/integration/auth-provider-tester/lib/charms/grafana_auth/v0/: grafana_auth.py
tests/integration/auth-provider-tester/src/: charm.py
tests/integration/grafana-metadata-requirer-tester/: actions.yaml  charmcraft.yaml  requirements.txt
tests/integration/grafana-metadata-requirer-tester/src/: charm.py
tests/integration/grafana-tester/: charmcraft.yaml  config.yaml  metadata.yaml  requirements.txt
tests/integration/grafana-tester/lib/charms/grafana_auth/v0/: grafana_auth.py
tests/integration/grafana-tester/src/: charm.py
tests/integration/grafana-tester/src/grafana_dashboards/: grafana_tester.json.tmpl
tests/integration/oauth_tools/: __init__.py  constants.py  dex.py  dex.yaml  oauth_test_helper.py
tests/interface/: conftest.py  test_grafana_datasource.py
tests/manual/: bundle_1_ingress.yaml  bundle_2_tls_termination.yaml  bundle_3_end_to_end_tls.yaml
tests/scenario/: conftest.py  test_admin_password.py  test_charm.py  test_config_reporting_enabled.py  test_datasources.py  test_tracing_config.py
tests/unit/: conftest.py  helpers.py  test_auth_proxy_provider.py  test_auth_requirer.py  test_charm.py  test_charm_status.py  test_charmed_dashboard.py  test_config_reporting_enabled.py  test_custom_ini_config.py  test_dashboard_collision.py  test_dashboard_consumer.py  test_dashboard_provider.py  test_dashboard_transform.py  test_datasources.py  test_external_url.py  test_grafana_client.py  test_grafana_metadata_implementation.py  test_grafana_metadata_lib.py  test_oauth.py  test_role_attribute_path.py  test_server.py  test_source_consumer.py  test_source_provider.py  test_transform.py
tests/unit/dashboard_templates/: first.tmpl  other.json
tests/unit/features/: role_attribute_path.feature
tests/unit/manual_dashboards/: manual.tmpl
