# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "grafana-k8s"
version = "0.0"
requires-python = "==3.8.*" # TODO: what do we put here?

dependencies = [
  "ops>=2.17",
  "pyyaml",
  "urllib3",
  "jsonschema",
  "cryptography",
  "jinja2<3",
  "markupsafe==2.0.1", # https://github.com/pallets/markupsafe/issues/371
  "lightkube>=0.11",
  # lib/charms/grafana_k8s/v0/grafana_dashboard.py
  # lib/charms/temo_k8s/v1/charm_tracing.py
  "cosl", 
  # lib/charms/tempo_k8s/v1/charm_tracing.py
  "opentelemetry-exporter-otlp-proto-http",
  "pydantic",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "coverage[toml]",
  "responses",
  "cosl",
  "pydantic",
  # Integration
  "juju<=3.3.0,>=3.0",
  "websockets<14.0",
  "oauth_tools@git+https://github.com/canonical/iam-bundle@671a33419869fab1fe63d81873b41f6b181498e3#egg=oauth_tools",
  "lightkube",
  "minio",
  "pytest-operator>=0.39",
  "ops[testing]",
  "pytest-asyncio",
  "aiohttp",
  "asyncstdlib",
  "sh",
  "tenacity",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "R", "D"]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W505", "E501", "D107", "C901", "N818", "RET504"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
extraPaths = ["lib"]
pythonVersion = "3.8"
pythonPlatform = "All"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

[tool.codespell]
skip = ".git,.tox,build,venv*"
ignore-words-list = "assertIn"
