# Copyright 2021 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "grafana-k8s"
version = "0.0"
requires-python = "~=3.8"

dependencies = [
  "ops>=2.17",
  "ops[tracing]",
  "pyyaml",
  "urllib3",
  "jsonschema",
  "cryptography",
  "jinja2<3",
  "markupsafe==2.0.1", # https://github.com/pallets/markupsafe/issues/371
  "lightkube>=0.11",
  # lib/charms/grafana_k8s/v0/grafana_dashboard.py
  # lib/charms/tempo_k8s/v1/charm_tracing.py
  "cosl",
  # lib/charms/istio_beacon_k8s/v0/service_mesh.py
  "charmed-service-mesh-helpers>=0.2.0",
  "lightkube-extensions",
  "pydantic[email]>=2.10.6",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "pytest-bdd",
  "coverage[toml]",
  "responses",
  "cosl",
  "pydantic",
  # Integration
  "juju<=3.3.0,>=3.0",
  "websockets<14.0",
  "lightkube",
  "minio",
  "oauth-tools",
  "pytest-operator>=0.39",
  "ops[testing]",
  "pytest-asyncio",
  "pytest-playwright",
  "aiohttp!=3.11.13",  # Yanked
  "asyncstdlib",
  "sh",
  "tenacity",
  "jubilant",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "R", "D"]
# Ignore E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W505", "E501", "D107", "C901", "N818", "RET504"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
extraPaths = ["lib"]
pythonVersion = "3.8"
pythonPlatform = "All"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

[tool.codespell]
skip = ".git,.tox,build,venv*"
ignore-words-list = "assertIn"

[tool.uv.sources]
oauth-tools = { git = "https://github.com/canonical/iam-bundle", rev = "oauth_tools-v0.1.2" }
